--- a/package.json
+++ b/package.json
@@ -2,11 +2,36 @@
   "name": "react-organism",
   "version": "0.1.0",
   "description": "Separate React state in a dead simple functional way",
-  "main": "index.js",
-  "repository": "https://github.com/BurntCaramel/react-organism.git",
-  "author": "Patrick Smith <patrick@burntcaramel.com>",
-  "license": "MIT",
+  "main": "lib/index.js",
+  "module": "es/index.js",
+  "files": [
+    "css",
+    "es",
+    "lib",
+    "umd"
+  ],
+  "scripts": {
+    "build": "nwb build-react-component",
+    "clean": "nwb clean-module && nwb clean-demo",
+    "start": "nwb serve-react-demo",
+    "test": "nwb test-react",
+    "test:coverage": "nwb test-react --coverage",
+    "test:watch": "nwb test-react --server"
+  },
+  "dependencies": {},
+  "peerDependencies": {
+    "react": "15.x"
+  },
   "devDependencies": {
-    "nwb": "^0.16.3"
-  }
+    "nwb": "0.16.x",
+    "react": "^15.5.4",
+    "react-dom": "^15.5.4"
+  },
+  "author": "",
+  "homepage": "",
+  "license": "MIT",
+  "repository": "",
+  "keywords": [
+    "react-component"
+  ]
 }
