--- a/packages/create-react-organism/package.json
+++ b/packages/create-react-organism/package.json
@@ -1,7 +1,7 @@
 {
   "name": "create-react-organism",
-  "version": "0.1.0",
-  "description": "Tool to easily create react-organism components",
+  "version": "0.1.1",
+  "description": "Tool to easily create react-organism smart components",
   "engines": {
     "node": ">=6"
   },
