--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "test": "nwb test-react",
     "test:coverage": "nwb test-react --coverage",
     "test:watch": "nwb test-react --server",
-    "now:deploy": "yarn run build && cd demo/dist && now",
+    "now:deploy": "yarn run build && cd demo/dist && now deploy",
     "explore-bundle": "source-map-explorer"
   },
   "dependencies": {},
