--- a/package.json
+++ b/package.json
@@ -23,12 +23,12 @@
   },
   "dependencies": {},
   "peerDependencies": {
-    "react": "15.x"
+    "react": "16.x"
   },
   "devDependencies": {
-    "nwb": "0.16.x",
-    "react": "^15.6.1",
-    "react-dom": "^15.6.1",
+    "nwb": "^0.18.10",
+    "react": "next",
+    "react-dom": "next",
     "source-map-explorer": "^1.3.3"
   },
   "author": "",
