Update React peer dependency for both 15 & 16

--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   },
   "dependencies": {},
   "peerDependencies": {
-    "react": "16.x"
+    "react": "^15.0.0-0 || ^16.0.0-0"
   },
   "devDependencies": {
     "nwb": "^0.18.10",
