--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
   },
   "devDependencies": {
     "nwb": "^0.18.10",
-    "react": "^6",
-    "react-dom": "^6",
+    "react": "^16.0.0-0",
+    "react-dom": "^16.0.0-0",
     "source-map-explorer": "^1.3.3"
   },
   "author": "",
