--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "react-organism",
-  "version": "0.3.7",
+  "version": "0.3.8",
   "description": "Separate React state in a dead simple functional way",
   "main": "lib/index.js",
   "module": "es/index.js",
+  "types": "src/index.d.ts",
   "files": [
     "css",
     "es",
